# SimpleFlowSDKs

./: .gitignore  CNAME  COMPATIBILITY_MATRIX.md  Makefile  README.md  SDK_PLAN.md  SUBAGENT_TODO.md  TELEMETRY_ENVELOPE_V1.md  TODO.md
.github/workflows/: docs.yml  repo-hygiene.yml
code-review/: code_smell_fix_plan.md  code_smell_pr_execution_plan.md  code_smell_remediation_technical_plan.md  code_smell_report.md
contracts/runtime-registration/: action_path_cases.json
contracts/telemetry-envelope-v1/: workflow_basic.json
docs/: CNAME  agent-integration.md  agent-zero-to-control-plane.md  compatibility-matrix.md  index.md  package-lock.json  package.json  publishing.md  quickstart.md  sdk-go-integration.md  sdk-go.md  sdk-integration-common.md  sdk-node-integration.md  sdk-node.md  sdk-python-integration-step-by-step.md  sdk-python-integration.md  sdk-python-quick-reference.md  sdk-python.md  telemetry-envelope-v1-spec.md  telemetry-envelope-v1.md  troubleshooting.md
docs/.vitepress/: config.mjs
examples/node-simpleagents-chat/: README.md  sample_workflow_result.json  seed_chat_from_simpleagents.js  seed_chat_from_simpleagents.ts
examples/python-simpleagents-chat/: README.md  sample_workflow_result.json  seed_chat_from_simpleagents.py
examples/simpleflow-hr-agent/: .env.example  README.md  package-lock.json  package.json
node/: README.md
python/: README.md  pyproject.toml
python/simpleflow_sdk/: __init__.py  auth.py  client.py  contracts.py  response_models.py
python/tests/: test_auth.py  test_client.py
tset-exp/: test-auth.py
(+61 files in other folders)
